# AleFlow

./: .gitignore  .prettierignore  AGENTS.md  AGENT_REBRAND_GUIDE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  CRUSH.md  Cargo.toml  README.md  REBRANDING_GUIDE.md  RELEASE_0.7.2_TASKS.md  bun.lockb  index.html  package-lock.json  package.json  private.pem  public.pem  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-test.yml  build.yml  lint.yml  main.yml  pr-test-build.yml  prettier.yml  release.yml
crates/audio-toolkit/: Cargo.toml
crates/audio-toolkit/src/audio/: device.rs  recorder.rs
crates/audio-toolkit/src/vad/: silero.rs
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/: default_settings.json
src-tauri/src/: actions.rs  apple_intelligence.rs  audio_feedback.rs  clipboard.rs  input.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  settings.rs  shortcut.rs  signal_handle.rs  signal_handler.rs  tray.rs  tray_i18n.rs  utils.rs
src-tauri/src/audio_toolkit/: mod.rs  utils.rs
src-tauri/src/audio_toolkit/audio/: device.rs  mod.rs  recorder.rs  resampler.rs
src-tauri/src/audio_toolkit/vad/: silero.rs  smoothed.rs
src-tauri/src/commands/: audio.rs  browser.rs  history.rs  mod.rs  models.rs  transcription.rs
src-tauri/src/helpers/: clamshell.rs
src-tauri/src/managers/: audio.rs  history.rs  keybinding.rs  mod.rs  model.rs  transcription.rs
src-tauri/swift/: apple_intelligence.swift  apple_intelligence_bridge.h  apple_intelligence_stub.swift
src/components/: AccessibilityPermissions.tsx  Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/icons/: AleFlowMark.tsx  CancelIcon.tsx  HandyTextLogo.tsx  MicrophoneIcon.tsx  ResetIcon.tsx  TranscriptionIcon.tsx  index.ts
src/components/model-selector/: DownloadProgressDisplay.tsx  ModelDropdown.tsx  ModelSelector.tsx  ModelStatusButton.tsx  index.ts
src/components/onboarding/: ModelCard.tsx  Onboarding.tsx
src/components/settings/: AboutSettings.tsx  AdvancedSettings.tsx  AleFlowShortcut.tsx  AlwaysOnMicrophone.tsx  AppDataDirectory.tsx  AppLanguageSelector.tsx  AppendTrailingSpace.tsx  AudioFeedback.tsx  AutostartToggle.tsx  Browser.tsx  ClamshellMicrophoneSelector.tsx  ClipboardHandling.tsx  CorrectWords.tsx  CustomWords.tsx  DebugSettings.tsx  GeneralSettings.tsx  HandyShortcut.tsx  HistoryLimit.tsx  HistorySettings.tsx  KeyboardShortcuts.tsx  LanguageSelector.tsx  MicrophoneSelector.tsx  ModelUnloadTimeout.tsx  MuteWhileRecording.tsx  OutputDeviceSelector.tsx  PasteMethod.tsx  PostProcessingToggle.tsx  PushToTalk.tsx  RecordingRetentionPeriod.tsx  RestrictedBrowser.tsx  Settings.tsx  ShowOverlay.tsx  SoundPicker.tsx  StartHidden.tsx  TranslateToEnglish.tsx  UpdateChecksToggle.tsx  VolumeSlider.tsx  index.ts
src/components/settings/PostProcessingSettingsApi/: usePostProcessProviderState.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/debug/: DebugPaths.tsx  DebugSettings.tsx  LogDirectory.tsx  LogLevelSelector.tsx  WordCorrectionThreshold.tsx  index.ts
src/components/settings/general/: GeneralSettings.tsx
src/components/settings/history/: HistorySettings.tsx
src/components/settings/post-processing/: PostProcessingSettings.tsx
src/components/shared/: ProgressBar.tsx  index.ts
src/components/spatial/: AppIcon.tsx  AppIcon3D.tsx  AxisGizmo.tsx  BlenderControls.tsx  SpatialCanvas.tsx  SpatialWorld.tsx  TerrainNet.tsx
src/components/ui/: AudioPlayer.tsx  Badge.tsx  Button.tsx  Dropdown.tsx  Input.tsx  ResetButton.tsx  Select.tsx  SettingContainer.tsx  SettingsGroup.tsx  Slider.tsx  TextDisplay.tsx  Textarea.tsx  ToggleSwitch.tsx  index.ts
src/components/update-checker/: UpdateChecker.tsx  index.ts
src/hooks/: useModels.ts  useSettings.ts
src/i18n/: index.ts  languages.ts
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/lib/: types.ts
src/lib/constants/: languages.ts
src/lib/utils/: keyboard.ts  modelTranslation.ts
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx  index.html  main.tsx
src/stores/: settingsStore.ts
