[package]
name = "handy"
version = "0.3.7"
description = "Handy"
authors = ["cjpais"]
edition = "2021"
license = "MIT"
default-run = "handy"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "handy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# [[bin]]
# name = "cli"
# path = "src/audio_toolkit/bin/cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
once_cell = "1"
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    'image-png',
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-macos-permissions = "2.0.4"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
cpal = "0.16.0"
anyhow = "1.0.95"
rubato = "0.16.2"
hound = "3.5.1"
env_logger = "0.11.6"
log = "0.4.25"
tokio = "1.43.0"
vad-rs = "0.1.5"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
enigo = "0.5.0"
tauri-plugin-process = "2"
rodio = { git = "https://github.com/cjpais/rodio.git" }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
tauri-plugin-fs = "2"
rustfft = "6.4.0"
strsim = "0.11.0"
natural = "0.5.0"

[dependencies.ort-sys]
version = "=2.0.0-rc.9"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.14.4", features = ["metal", "log_backend"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.14.4", features = ["vulkan", "log_backend"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.14.4", features = ["vulkan", "log_backend"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2"
